[WEA-451] Weasis portable doesn't support Java 9